Minor version bump

--- a/help.textile
+++ b/help.textile
@@ -16,9 +16,10 @@ Download and copy the plugin code to the plugin installer textarea. Install and 
 
 h2. Changelog
 
-h3. 0.1.1 / 0.1.2 - 2024-12-09
+h3. 0.1.1 / 0.1.2 / 0.1.3 - 2024-12-09
 
 * Restrict to users with 'admin.list' and 'article.php' privileges (thanks Oleg).
+* Preset with current user when creating a new article (thanks Oleg).
 
 h3. 0.1.0 - 2024-12-08
 
